2007-10-29  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.[ch]:
	Move nautilus_file_operations_delete to the gio code.

        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-tree-view.c:
	Update to use new nautilus_file_operations_delete

2007-10-26  Paolo Borelli  <pborelli@katamail.com>

        * libnautilus-private/nautilus-module.c:
	Fix valgrind warning on shutdown (#346401, ported from trunk).

2007-10-26  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-directory.c:
	* libnautilus-private/nautilus-desktop-link.c:
	* libnautilus-private/nautilus-desktop-icon-file.c:
	* libnautilus-private/nautilus-bookmark.c:
	* libnautilus-private/nautilus-trash-monitor.c:
	* libnautilus-private/nautilus-file.c:
	Plug minor memory leaks and improper uses of eel_ref_str_*

2007-10-26  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-desktop-link.c: unref the icon instead
	of freeing it to avoid memory corruption.

2007-10-25  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-changes-queue.[ch]:
        * libnautilus-private/nautilus-monitor.c:
	Rename some file change queue functions to _by_uri
	add GFile based version with the original name
	
        * libnautilus-private/nautilus-file-operations.[ch]:
	Add gio based nautilus_file_operations_trash_or_delete() call.
	
        * src/file-manager/fm-directory-view.c:
	Call nautilus_file_operations_trash_or_delete()
	Remove unused code

2007-10-25  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.[ch]:
	Make file activation handle mounting of mountables and non-mounted
	locations. Also general cleanup of activation.
	Cancellation not handled yet.

2007-10-25  Paolo Borelli  <pborelli@katamail.com>

	* src/file-manager/fm-list-view.c:
	* libnautilus-private/nautilus-icon-info.c:
	* libnautilus-private/nautilus-file.c: