@@ -1,5 +1,17 @@
 2007-10-29  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-utilities.[ch]:
+        * libnautilus-private/nautilus-file-operations.c:
+	Move public gnome-vfs functions from file-utilities to internal
+	calls in file-operations.c
+	Replace gnome-vfs use with gio
+	
+        * libnautilus-private/nautilus-file-operations-progress.c:
+        * src/file-manager/fm-tree-view.c:
+	Replace gnome-vfs use with gio
+
+2007-10-29  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.[ch]:
 	Move nautilus_file_operations_delete to the gio code.
 
